<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <SwitchPreference
        android:defaultValue="true"
        android:key="scribe"
        android:title="@string/pref_scribe"
        android:summary="@string/pref_scribe_summuray" />

    <EditTextPreference
        android:dependency="scribe"
        android:defaultValue="@string/pref_scribe_default_ip"
        android:inputType="number|numberDecimal"
        android:digits="0123456789."
        android:key="scribeIp"
        android:selectAllOnFocus="false"
        android:title="@string/pref_scribe_ip" />


    <EditTextPreference
        android:dependency="scribe"
        android:defaultValue="@string/pref_scribe_default_port"
        android:inputType="number"
        android:key="scribePort"
        android:selectAllOnFocus="false"
        android:title="@string/pref_scribe_port" />

</PreferenceScreen>
