<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/update_layout"
    tools:context="com.pyozer.sarah.UpdateActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/update_text_title"
        android:id="@+id/checkResult"
        android:textAlignment="center"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/checkUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_check_text"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:background="@drawable/custom_button"
        android:textColor="@color/white" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_below="@+id/checkUpdate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_download_last"
        android:id="@+id/downloadUpdate"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/checkUpdate"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>
