<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/layoutView"
    tools:context="com.pyozer.sarah.SpeakActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textSpeak"
        android:id="@+id/textSpeak"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_text4Speak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="51dp"
        android:layout_marginTop="63dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textSpeak" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text4Speak"
            android:maxLines="10"
            android:selectAllOnFocus="false"
            android:hint="@string/speak_write_text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/button4Speak"
        android:id="@+id/button4Speak"
        android:layout_below="@+id/input_layout_text4Speak"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_mic"
        android:src="@drawable/ic_mic_black_24dp"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/input_layout_text4Speak"
        android:minWidth="50dp"
        android:maxWidth="50dp"
        android:layout_marginBottom="5dp"/>

</RelativeLayout>
